@@ -1,24 +1,28 @@
 package ru.senla.javacourse.mutovin.messenger.impl.service.impl;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.senla.javacourse.mutovin.messenger.api.dto.PostDto;
 import ru.senla.javacourse.mutovin.messenger.api.dto.UserDto;
-import ru.senla.javacourse.mutovin.messenger.db.entity.Friendship;
-import ru.senla.javacourse.mutovin.messenger.db.entity.Role;
-import ru.senla.javacourse.mutovin.messenger.db.entity.User;
+import ru.senla.javacourse.mutovin.messenger.api.dto.request.UserUpdateRequest;
+import ru.senla.javacourse.mutovin.messenger.db.entity.*;
+import ru.senla.javacourse.mutovin.messenger.impl.exception.ResourceNotFoundException;
+import ru.senla.javacourse.mutovin.messenger.impl.mapper.PostMapper;
 import ru.senla.javacourse.mutovin.messenger.impl.mapper.UserMapper;
 import ru.senla.javacourse.mutovin.messenger.impl.repository.FriendshipRepository;
+import ru.senla.javacourse.mutovin.messenger.impl.repository.PostRepository;
 import ru.senla.javacourse.mutovin.messenger.impl.repository.UserRepository;
 import ru.senla.javacourse.mutovin.messenger.impl.service.UserService;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,6 +31,16 @@ public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
     private final UserMapper userMapper;
     private final FriendshipRepository friendshipRepository;
+    private final PostRepository postRepository;
+    private final PostMapper postMapper;
+
+    @Override
+    public List<UserDto> filterUsers(String firstName,String lastName,Integer age,String gender) {
+        List<User> result = userRepository.filterUsers(firstName,lastName,age,gender)
+                .orElse(Collections.emptyList());
+
+        return result.stream().map(userMapper::map).toList();
+    }
 
     @Override
     @Transactional
@@ -50,6 +64,27 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
+    public UserDto updateUserProfile(Long userId,UserUpdateRequest request) {
+        User user = userRepository.findById(userId).
+                orElseThrow(() -> new UsernameNotFoundException("Пользователь с id = " + userId + " не найден!"));
+
+        user.setFirstname(request.getFirstname());
+        user.setLastname(request.getLastname());
+        user.setAge(request.getAge());
+        user.setGender(Gender.valueOf(request.getGender()));
+        user.setEmail(request.getEmail());
+        user.setPhoneNumber(request.getPhonenumber());
+        User result = userRepository.update(user).orElseThrow(
+                () -> new RuntimeException("Не удалось обновить профиль"));
+
+        return userMapper.map(result);
+
+    }
+
+
+    @Override
+    @Transactional
+    @Cacheable(value = "UserService::findByUsername", key = "#username")
     public User findByUsername(String username) {
         return userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("Пользователь с username = " + username + " не найден!"));
@@ -61,6 +96,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Cacheable(value = "UserService::findById", key = "#id")
     @Transactional
     public User findById(Long id) {
         return userRepository.findById(id)
@@ -93,11 +129,11 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public UserDto addFriend(Long userId, Long friendId) {
+    public UserDto addFriend(Long userId,Long friendId) {
         User user = findById(userId);
         User friend = findById(friendId);
 
-        if (friendshipRepository.findByUserIdAndFriendId(userId, friendId).isPresent()) {
+        if (friendshipRepository.findByUserIdAndFriendId(userId,friendId).isPresent()) {
             throw new IllegalStateException("Дружба уже существует");
         }
 
@@ -109,27 +145,33 @@ public class UserServiceImpl implements UserService {
         friendshipRepository.save(friendship).orElseThrow(
                 () -> new IllegalStateException("Не удалось сохранить дружбу")
         );
-        return findByIdWithFriends(userId);
+        return findByIdWithFriendsAndPosts(userId);
     }
 
     @Override
     @Transactional
-    public void removeFriend(Long userId, Long friendId) {
-        friendshipRepository.deleteByUserIdAndFriendId(userId, friendId);
+    public void removeFriend(Long userId,Long friendId) {
+        friendshipRepository.deleteByUserIdAndFriendId(userId,friendId);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public UserDto findByIdWithFriends(Long id) {
+    public UserDto findByIdWithFriendsAndPosts(Long id) {
         UserDto userDto = userMapper.map(findById(id));
 
         List<UserDto> friends = friendshipRepository.findByUserId(id)
                 .stream()
                 .map(Friendship::getFriend)
                 .map(userMapper::map)
-                .collect(Collectors.toList());
+                .toList();
+        List<Post> posts = postRepository.findByCreatorId(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Посты не найдены"));
+        List<PostDto> postDtos = posts.stream().map(postMapper::map).toList();
 
+        userDto.setPosts(postDtos);
         userDto.setFriends(friends);
         return userDto;
     }
+
+
 }
